--- a/chrome-extension/styles.css
+++ b/chrome-extension/styles.css
@@ -271,3 +271,14 @@ body {
 .field-list::-webkit-scrollbar-thumb:hover {
   background: #a8a8a8;
 }
+
+#Author {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+
+}
